[package]
edition = "2021"
name = "esteem"
version = "0.0.0"

[dependencies.clap]
features = ["derive"]
version = "3.1.6"

[dependencies.libloading]
version = "0.7"

[dependencies.frosting]
git = "https://github.com/elysian6969/frosting.git"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = "fat"

[workspace]
members = ["crates/*"]
