[package]
edition = "2021"
name = "esteem"
version = "0.0.0"

[dependencies.clap]
features = ["derive"]
version = "*"

[dependencies.dirs]
default-features = false
version = "*"

[dependencies.libc]
default-features = false
version = "*"

[dependencies.libloading]
default-features = false
version = "*"

[dependencies.frosting]
default-features = false
git = "https://github.com/elysian6969/frosting.git"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = "fat"

[workspace]
members = ["crates/*"]
