[package]
edition = "2021"
name = "esteem"
version = "0.0.0"

[dependencies.clap]
features = ["derive"]
version = "3.2"

[dependencies.dirs]
default-features = false
version = "4.0"

[dependencies.frosting]
default-features = false
git = "https://github.com/elysian6969/frosting"

[dependencies.libc]
default-features = false
version = "0.2"

[dependencies.link]
default-features = false
#git = "https://github.com/elysian6969/link"
path = "../link"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = "fat"

[workspace]
members = ["crates/*"]
