[package]
edition = "2021"
name = "steam-api"
version = "0.0.0"

# keep this here, ill add vtable macro stuff in this lib, too
[dependencies.frosting]
git = "https://github.com/elysian6969/frosting.git"

[dependencies.paste]
version = "1.0"

[dependencies.steam-id]
path = "../id"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
